crates/compiler/src/tests/e2e/good/0066_dyn_trait_impl_for_func_type/main.gom
trait Callable {
    fn call(Self, int32) -> int32;
}

impl Callable for (int32) -> int32 {
    fn call(self: (int32) -> int32, x: int32) -> int32 { self(x) }
}

fn apply_callable(c: dyn Callable, n: int32) -> int32 {
    Callable::call(c, n)
}

fn main() {
    let f: (int32) -> int32 = |x| x + 1;
    let _ = println(apply_callable(f, 10));
    let g = |x: int32| x * 3;
    let _ = println(apply_callable(g, 10));
}
