crates/compiler/src/tests/e2e/bad/0052_trait_decl_missing_method_sig/main.gom
trait Callable {
    call(Self, int32) -> int32;
}

fn main() {}
